<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DisplayImballaggi" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="82dp"
            android:ems="10"
            android:inputType="text" >
        </EditText>

        <EditText
            android:id="@+id/editTextForn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextQuant"
            android:layout_below="@+id/editTextQuant"
            android:layout_marginTop="22dp"
            android:ems="10" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/MPnome"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextForn"
            android:layout_alignLeft="@+id/editTextForn"
            android:layout_alignParentBottom="false"
            android:layout_marginBottom="28dp"
            android:onClick="run"
            android:text="@string/save" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextForn"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/MPforn"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextPrezzo"
            android:layout_alignLeft="@+id/textView1"
            android:text="@string/MPprezzo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editTextForn"
            android:layout_alignLeft="@+id/textView5"
            android:text="@string/MPquant"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextQuant"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextPrezzo"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPrezzo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextQuant"
            android:layout_below="@+id/editTextName"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:text="@string/Buttonforn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editTextForn"
            android:layout_alignParentEnd="true"
            android:id="@+id/selezForn"
            android:onClick="ScegliFornitore">
     </Button>

        <ListView
            android:id="@+id/LisForn"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_below="@+id/selezForn"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/button1" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_alignParentStart="true"
            android:id="@+id/FornitoreSelez" />

        <TextView
            android:text=" "
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FornitoreSelez"

            android:layout_marginTop="27dp"
            android:id="@+id/UltimaModifica" />

        <TextView
            android:text="Ultima Modifica"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FornitoreSelez"
            android:layout_alignParentStart="true"
            android:id="@+id/textView15" />

    </RelativeLayout>
</ScrollView>